--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Data": {
+    "Connection": "DATA SOURCE=DESKTOP-40N062N\\SQLEXPRESS;Integrated Security=true;DATABASE=zdjeciazwakacji;Trust Server Certificate=true"
+  },
+  "ConnectionStrings": {
+    "UserContextConnection": "Server=(localdb)\\mssqllocaldb;Database=aplikacja_zdjecia_z_wakacji;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
